# controller/verify_code_controller.go
@@ -14,6 +14,12 @@ var VerifyCodeCtl = &verifyCodeController{}
 
 // 识别验证码中的文字
 // 提供服务给外面调用
+// @Summary 验证码识别
+// @Param img formData file true "image of verify code"
+// @Router /decode_verify_code [post]
+// @Success 200 {object} service.Response
+// @Produce json
+// @Accept image/gif
 func (v *verifyCodeController) Recognize(c *gin.Context) {
 	var text string
 	file, err := c.FormFile("img")
